kube-config/pgadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: pgadmin
  template:
    metadata:
      labels:
        components: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
        ports:
          - containerPort: 80
