kube-config/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: pgadmin
